DWC update, localstorage added for word/progress recovery, still need to solve multiple letters in wrong position problem

--- a/davidswordchallenge/assets/css/styles.css
+++ b/davidswordchallenge/assets/css/styles.css
@@ -57,7 +57,7 @@ nav {
   background-color: #7296ae;
 }
 
-.btn {
+.btnkey {
   margin: 2px;
   width: 32px;
   font-weight: bold;
